--- a/index.html
+++ b/index.html
@@ -1,25 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Aditya Shetty | CS Student</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Aditya Shetty's Portfolio</title>
 </head>
 <body>
-  <header>
-    <h1>Hi, I'm Aditya!</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="about.html">About</a>
-    </nav>
-  </header>
-
-  <section>
-    <p>Welcome to my personal website. I'm a CS student passionate about AI, web dev, and problem solving!</p>
-  </section>
-
-  <footer>
-    <p>© 2025 Aditya Shetty</p>
-  </footer>
+  <h1>Welcome to my Portfolio Website!</h1>
+  <p>This is a placeholder homepage.</p>
 </body>
 </html>
