--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         }
 
         :root {
-            --primary-color: #8FBC8F;
-            --secondary-color: #90EE90;
+            --primary-color: #008000;
+            --secondary-color: #BE5103;
             --accent-color: #06b6d4;
             --text-primary: #1f2937;
             --text-secondary: #6b7280;
