--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         }
 
         :root {
-            --primary-color: #008000;
-            --secondary-color: #BE5103;
-            --accent-color: #06b6d4;
+            --primary-color: #D0DB61;
+            --secondary-color: #FEFCD0;
+            --accent-color: #458728;
             --text-primary: #1f2937;
             --text-secondary: #6b7280;
             --text-light: #9ca3af;
