--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         }
 
         :root {
-            --primary-color: #D0DB61;
+            --primary-color: #006400;
             --secondary-color: #FEFCD0;
-            --accent-color: #458728;
+            --accent-color: #D0DB61;
             --text-primary: #1f2937;
             --text-secondary: #6b7280;
             --text-light: #9ca3af;
