--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1>Aditya Shetty</h1>
-                <p>Welcome to my Portfolio Website! I'm a passionate developer and problem solver, dedicated to creating innovative solutions and building amazing digital experiences.</p>
+                <p>Hey Everyone! I am a Software Engineer currently studying at Queen's University. I'm passionate about expanding my skillset in Deep Learning and Basketball!</p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work</a>
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
@@ -645,16 +645,15 @@
                 <div class="profile-card">
                     <div class="profile-pic">AS</div>
                     <h3>Aditya Shetty</h3>
-                    <p>Developer & Problem Solver</p>
+                    <p>Software Engineer</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Skills Section -->
     <section id="skills" class="section">
         <div class="container">
-            <h2 class="section-title">Technical Skills</h2>
+            <h2 class="section-title">Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category fade-in">
                     <h3>Programming Languages</h3>
@@ -664,9 +663,7 @@
                         <span class="skill-tag">Java</span>
                         <span class="skill-tag">C++</span>
                         <span class="skill-tag">TypeScript</span>
-                        <span class="skill-tag">Go</span>
                         <span class="skill-tag">PHP</span>
-                        <span class="skill-tag">Ruby</span>
                     </div>
                 </div>
                 <div class="skill-category fade-in">
@@ -678,16 +675,12 @@
                         <span class="skill-tag">CSS3</span>
                         <span class="skill-tag">Express.js</span>
                         <span class="skill-tag">Next.js</span>
-                        <span class="skill-tag">Vue.js</span>
-                        <span class="skill-tag">MongoDB</span>
                     </div>
                 </div>
                 <div class="skill-category fade-in">
                     <h3>Tools & Environment</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Git</span>
-                        <span class="skill-tag">Docker</span>
-                        <span class="skill-tag">AWS</span>
                         <span class="skill-tag">Linux</span>
                         <span class="skill-tag">PostgreSQL</span>
                         <span class="skill-tag">Redis</span>
@@ -699,16 +692,15 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
     <section id="experience" class="section section-alt">
         <div class="container">
             <h2 class="section-title">Experience</h2>
             <div class="experience-timeline">
                 <div class="experience-item fade-in">
                     <div class="experience-content">
-                        <h3>Your Experience Title</h3>
-                        <h4>Company Name</h4>
-                        <p>Add your professional experience here. Describe your role, responsibilities, and achievements in this position.</p>
+                        <h3>Bakery Service Member</h3>
+                        <h4>Fortinos Bakery, Brampton ON [Sep 2021- August 2022]</h4>
+                        <p>Assited Clients in Sevice Inquries</p>
                     </div>
                 </div>
                 <div class="experience-item fade-in">
