--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             background: var(--bg-primary);
             overflow-x: hidden;
         }
-
-        /* Navigation */
+        
         nav {
             position: fixed;
             top: 0;
@@ -635,7 +634,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1>Aditya Shetty</h1>
-                <p>Hey Everyone! I am a Software Engineer currently studying at Queen's University. I'm passionate about expanding my skillset in Deep Learning and Basketball!</p>
+                <p>Hey Everyone! I am a Software Engineer currently studying at Queen's University. I'm passionate about expanding my skillset in Deep Learning and NL Processing</p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work</a>
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
@@ -700,14 +699,18 @@
                     <div class="experience-content">
                         <h3>Bakery Service Member</h3>
                         <h4>Fortinos Bakery, Brampton ON [Sep 2021- August 2022]</h4>
-                        <p>Assited Clients in Sevice Inquries</p>
+                        <p>Assited Clients in Sevice Inquries and Relations</p>
+                        <p>Organized and Led Group Productivity meetings</p>
+                        <p>Maintained a Perfect Attendence record Throughout my Time at the company</p>
                     </div>
                 </div>
                 <div class="experience-item fade-in">
                     <div class="experience-content">
-                        <h3>Previous Experience</h3>
-                        <h4>Previous Company</h4>
-                        <p>Describe your previous work experience, highlighting key projects and accomplishments that demonstrate your skills and expertise.</p>
+                        <h3>Online Client Support Specialist</h3>
+                        <h4>Homelife Miracle, Brampton ON [April 2023- September 2024]</h4>
+                        <p>Mangaged Client to Broker Relations</p>
+                        <p>Helped Booking Dates and Service for Prospective Clients</p>
+                        <p>Built Strong Networking Relations with Brokers in the GTA</p>
                     </div>
                 </div>
             </div>
