--- a/index.html
+++ b/index.html
@@ -691,31 +691,39 @@
         </div>
     </section>
 
-    <section id="experience" class="section section-alt">
-        <div class="container">
-            <h2 class="section-title">Experience</h2>
-            <div class="experience-timeline">
-                <div class="experience-item fade-in">
-                    <div class="experience-content">
-                        <h3>Bakery Service Member</h3>
-                        <h4>Fortinos Bakery, Brampton ON [Sep 2021- August 2022]</h4>
-                        <p>Assited Clients in Sevice Inquries and Relations</p>
-                        <p>Organized and Led Group Productivity meetings</p>
-                        <p>Maintained a Perfect Attendence record Throughout my Time at the company</p>
-                    </div>
-                </div>
-                <div class="experience-item fade-in">
-                    <div class="experience-content">
-                        <h3>Online Client Support Specialist</h3>
-                        <h4>Homelife Miracle, Brampton ON [April 2023- September 2024]</h4>
-                        <p>Mangaged Client to Broker Relations</p>
-                        <p>Helped Booking Dates and Service for Prospective Clients</p>
-                        <p>Built Strong Networking Relations with Brokers in the GTA</p>
-                    </div>
+<section id="experience" class="section section-alt">
+    <div class="container">
+        <h2 class="section-title">Experience</h2>
+        <div class="experience-timeline">
+
+            <div class="experience-item fade-in">
+                <div class="experience-content">
+                    <h3>Bakery Service Member</h3>
+                    <h4>Fortinos Bakery, Brampton ON &mdash; Sep 2021 – Aug 2022</h4>
+                    <ul>
+                        <li>Assisted clients with service inquiries, enhancing customer satisfaction.</li>
+                        <li>Organized and led group productivity meetings, boosting team efficiency.</li>
+                        <li>Maintained a perfect attendance record throughout employment.</li>
+                    </ul>
                 </div>
             </div>
+
+            <div class="experience-item fade-in">
+                <div class="experience-content">
+                    <h3>Online Client Support Specialist</h3>
+                    <h4>Homelife Miracle, Brampton ON &mdash; Apr 2023 – Sep 2024</h4>
+                    <ul>
+                        <li>Managed client-to-broker communications, ensuring smooth interactions.</li>
+                        <li>Coordinated booking of services and appointments for prospective clients.</li>
+                        <li>Built strong networking relationships with brokers across the GTA.</li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Projects Section -->
     <section id="projects" class="section">
