--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <section id="about">
     <h2>About</h2>
-    <p>I'm passionate about software development, deep learning, and natural language processing.</p>
+    <p>Hey Everyone! I am a Software Engineer currently studying at Queen's University. I'm passionate about expanding my skillset in Deep Learning and NL Processing.</p>
   </section>
 
   <section id="skills">
@@ -121,18 +121,18 @@
       <h3>Bakery Service Member</h3>
       <p>Fortinos, Sep 2021 – Aug 2022</p>
       <ul>
-        <li>Helped customers</li>
-        <li>Led meetings</li>
-        <li>Perfect attendance</li>
+          <li>Assisted clients with service inquiries, enhancing customer satisfaction.</li>
+          <li>Organized and led group productivity meetings, boosting team efficiency.</li>
+          <li>Maintained a perfect attendance record throughout employment.</li>
       </ul>
     </div>
     <div class="box">
       <h3>Online Support Specialist</h3>
       <p>Homelife Miracle, Apr 2023 – Sep 2024</p>
       <ul>
-        <li>Managed client communications</li>
-        <li>Scheduled appointments</li>
-        <li>Networked with brokers</li>
+          <li>Managed client-to-broker communications, ensuring smooth interactions.</li>
+          <li>Coordinated booking of services and appointments for prospective clients.</li>
+          <li>Built strong networking relationships with brokers across the GTA.</li>
       </ul>
     </div>
   </section>
@@ -142,15 +142,12 @@
     <div class="projects">
       <div class="box">
         <h3>Project One</h3>
-        <p>Built with React, Node.js, MongoDB</p>
       </div>
       <div class="box">
         <h3>Project Two</h3>
-        <p>Built with Python, Django, PostgreSQL</p>
       </div>
       <div class="box">
         <h3>Project Three</h3>
-        <p>Built with JavaScript, Express, MySQL</p>
       </div>
     </div>
   </section>
