--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <header>
     <h1>Aditya Shetty</h1>
-    <p>Software Engineer at Queen's University</p>
+    <p>Computer Science Student at Queen's University</p>
   </header>
 
   <nav>
