--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
     <div class="skills">
       <div class="box">
         <strong>Languages</strong>
-        <p>JavaScript, Python, Java, C++, PHP</p>
+        <p>C/C++, CSS, HTML, Java, x86 , JavaScript, Numpy, Pandas, PHP, Python,R, Shell Scripting</p>
       </div>
       <div class="box">
         <strong>Web</strong>
-        <p>HTML, CSS, React, Node.js, Express</p>
+        <p>HTML, CSS, JavaScript, PHP, ASP.NET</p>
       </div>
       <div class="box">
         <strong>Tools</strong>
-        <p>Git, Linux, PostgreSQL, Docker</p>
+        <p>Git, Unix, Unity, VSCode </p>
       </div>
     </div>
   </section>
@@ -137,20 +137,41 @@
     </div>
   </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-      <div class="box">
-        <h3>Project One</h3>
-      </div>
-      <div class="box">
-        <h3>Project Two</h3>
-      </div>
-      <div class="box">
-        <h3>Project Three</h3>
-      </div>
+<section id="projects">
+  <h2>Projects</h2>
+  <div class="projects">
+    <div class="box">
+      <h3>Project One</h3>
+      <h4><strong>Word Guessing Game</strong></h4>
+      <p><a href="https://adityashett.github.io/word-guesser/" target="_blank">https://adityashett.github.io/word-guesser/</a></p>
+      <p><strong>HTML/CSS/JavaScript, DOM Manipulation</strong></p>
+      <li>Developed responsive single-page application using vanilla JavaScript and CSS</li>
+      <li>Implemented dynamic game state management with real-time UI updates</li>
+      <li>Created adaptive difficulty system with three skill levels and scoring mechanics</li>
     </div>
-  </section>
+    <div class="box">
+      <h3>Project Two</h3>
+      <h4><strong>Budgeting App</strong></h4>
+      <p><a href="https://adityashett.github.io/BudgetTracker/" target="_blank">https://adityashett.github.io/BudgetTracker/</a></p>
+      <p><strong>HTML/CSS/JavaScript, DOM Manipulation</strong></p>
+      <li>Developed comprehensive single-page application using vanilla JavaScript with modular state management</li>
+      <li>Implemented dynamic data visualization using Chart.js for budget allocation pie charts and spending trend analysis</li>
+      <li>Created responsive multi-page interface with expense tracking, income management, and financial health monitoring</li>
+      <li>Built real-time budget calculation system with percentage-based allocation and category progress tracking</li>
+    </div>
+    <div class="box">
+      <h3>Project Three</h3>
+      <h4><strong>Automated Grapher</strong></h4>
+      <p><a href="https://automatedgrapher-jeynjm4n6qqqpuiju8dnum.streamlit.app/" target="_blank">https://automatedgrapher-jeynjm4n6qqqpuiju8dnum.streamlit.app/</a></p>
+      <p><strong>Python, Streamlit, BeautifulSoup, Pandas, Matplotlib</strong></p>
+      <li>Developed comprehensive data visualization tool using Streamlit framework with automated Wikipedia table extraction</li>
+      <li>Implemented dynamic chart generation system supporting multiple visualization types (line, bar, pie charts) with automatic data formatting</li>
+      <li>Created intelligent web scraping pipeline using BeautifulSoup and DuckDuckGo search integration for real-time data retrieval</li>
+      <li>Built robust data processing engine with pandas DataFrame manipulation and matplotlib rendering for publication-ready visualizations</li>
+    </div>
+  </div>
+</section>
+
 
   <section id="contact" class="contact">
     <h2>Contact</h2>
