--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Aditya Shetty</title>
   <style>
     body {
-      font-family: monospace;
+      font-family: Bodoni;
       margin: 0;
       padding: 0;
       background: white;
