--- a/index.html
+++ b/index.html
@@ -79,12 +79,15 @@
 </head>
 <body>
 
-  <header>
+<header>
+  <div class="container">
     <h1>Aditya Shetty</h1>
     <p>Computer Science Student at Queen's University</p>
-  </header>
+  </div>
+</header>
 
   <nav>
+  <div class="container">
     <a href="#about">About</a>
     <a href="#skills">Skills</a>
     <a href="#experience">Experience</a>
