--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aditya Shetty</title>
-  <style>
-
+ <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     
     body {
-      font-family: 'Times New Roman';
-      margin: 0;
-      padding: 0;
-      background: white;
-      color: black;
+      font-family: 'Times New Roman', serif;
+      line-height: 1.6;
+      color: #333;
+      background: #fafafa;
     }
 
-     .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
+    .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
 
     header {
-      background: green;
+      background: linear-gradient(135deg, #2d5016, #4a7c59);
       color: white;
-      padding: 1rem;
+      padding: 80px 0;
       text-align: center;
+      position: relative;
+      overflow: hidden;
     }
 
-      header::before {
+    header::before {
       content: '';
       position: absolute;
       top: -50%;
@@ -59,64 +59,195 @@
     }
 
     nav {
-      background: lightgray;
-      padding: 0.5rem;
-      text-align: center;
+      background: rgba(0,0,0,0.9);
+      padding: 0;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+
+    nav .container {
+      display: flex;
+      justify-content: center;
     }
 
     nav a {
-      margin: 0 1rem;
-      color: black;
+      color: white;
       text-decoration: none;
+      padding: 18px 30px;
+      transition: all 0.3s ease;
+      font-weight: 500;
+      position: relative;
     }
 
     nav a:hover {
-      background: green;
+      background: #2d5016;
       transform: translateY(-2px);
     }
 
     section {
-      padding: 2rem;
-      border-bottom: 1px solid gray;
+      padding: 70px 0;
+      border-bottom: 1px solid #e0e0e0;
     }
+
+    section:nth-child(even) { background: white; }
 
     h2 {
-      margin-bottom: 1rem;
+      font-size: 2.5rem;
+      margin-bottom: 40px;
+      text-align: center;
+      color: #2d5016;
+      position: relative;
     }
 
-    .skills, .projects {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
+    h2::after {
+      content: '';
+      position: absolute;
+      bottom: -10px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80px;
+      height: 3px;
+      background: linear-gradient(90deg, #2d5016, #4a7c59);
     }
 
-    .box {
-      border: 1px solid gray;
-      padding: 1rem;
-      border-radius: 0.5rem;
-      background: lightgray;
-      flex: 1 1 200px;
+    .about-content {
+      max-width: 800px;
+      margin: 0 auto;
+      font-size: 1.2rem;
+      text-align: center;
+      color: #555;
     }
 
-    .contact input, .contact textarea {
+    .skills-grid, .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 30px;
+      margin-top: 50px;
+    }
+
+    .card {
+      background: white;
+      border-radius: 15px;
+      padding: 30px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      transition: all 0.3s ease;
+      border: 2px solid transparent;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+      border-color: #4a7c59;
+    }
+
+    .card h3 {
+      color: #2d5016;
+      margin-bottom: 15px;
+      font-size: 1.4rem;
+    }
+
+    .card h4 {
+      color: #4a7c59;
+      margin-bottom: 10px;
+    }
+
+    .experience-item {
+      background: white;
+      border-radius: 15px;
+      padding: 35px;
+      margin-bottom: 30px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+      border-left: 5px solid #4a7c59;
+    }
+
+    .experience-item h3 {
+      color: #2d5016;
+      margin-bottom: 5px;
+    }
+
+    .experience-item p {
+      color: #666;
+      margin-bottom: 15px;
+      font-style: italic;
+    }
+
+    .experience-item ul {
+      margin-left: 20px;
+    }
+
+    .experience-item li {
+      margin-bottom: 8px;
+      color: #555;
+    }
+
+    .project-link {
+      color: #4a7c59;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+
+    .project-link:hover {
+      color: #2d5016;
+    }
+
+    .contact-form {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .contact-form input, .contact-form textarea {
       width: 100%;
-      padding: 0.5rem;
-      margin-bottom: 1rem;
+      padding: 15px;
+      margin-bottom: 20px;
+      border: 2px solid #e0e0e0;
+      border-radius: 8px;
+      font-family: 'Times New Roman', serif;
+      font-size: 1rem;
+      transition: border-color 0.3s ease;
     }
 
-    .contact button {
-      background: green;
+    .contact-form input:focus, .contact-form textarea:focus {
+      outline: none;
+      border-color: #4a7c59;
+    }
+
+    .contact-form textarea { resize: vertical; min-height: 120px; }
+
+    .btn {
+      background: linear-gradient(135deg, #2d5016, #4a7c59);
       color: white;
       border: none;
-      padding: 0.5rem 1rem;
+      padding: 15px 40px;
+      border-radius: 50px;
       cursor: pointer;
+      font-size: 1.1rem;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 10px 20px rgba(45, 80, 22, 0.3);
     }
 
     footer {
-      background: black;
+      background: #1a1a1a;
       color: white;
       text-align: center;
-      padding: 1rem;
+      padding: 30px 0;
+      font-size: 0.9rem;
+    }
+
+    @media (max-width: 768px) {
+      header h1 { font-size: 2.5rem; }
+      nav a { padding: 15px 20px; }
+      section { padding: 50px 0; }
+      .skills-grid, .projects-grid { grid-template-columns: 1fr; }
     }
   </style>
 </head>
