--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aditya Shetty</title>
- <style>
+  <title>Aditya Shetty - Portfolio</title>
+  <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     
     body {
@@ -252,128 +252,117 @@
   </style>
 </head>
 <body>
-
-<header>
-  <div class="container">
-    <h1>Aditya Shetty</h1>
-    <p>Computer Science Student at Queen's University</p>
-  </div>
-</header>
+  <header>
+    <div class="container">
+      <h1>Aditya Shetty</h1>
+      <p>Computer Science Student at Queen's University</p>
+    </div>
+  </header>
 
   <nav>
-  <div class="container">
-    <a href="#about">About</a>
-    <a href="#skills">Skills</a>
-    <a href="#experience">Experience</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
+    <div class="container">
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#experience">Experience</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </div>
   </nav>
 
   <section id="about">
-    <h2>About</h2>
-    <p>Hey Everyone! I am a Software Engineer currently studying at Queen's University. I'm passionate about expanding my skillset in Deep Learning and NL Processing.</p>
+    <div class="container">
+      <h2>About Me</h2>
+      <div class="about-content">
+        <p>I am a passionate Software Engineer currently pursuing my studies at Queen's University. My focus lies in expanding my expertise in Deep Learning and Natural Language Processing, constantly exploring innovative solutions to complex problems.</p>
+      </div>
+    </div>
   </section>
 
   <section id="skills">
-    <h2>Skills</h2>
-    <div class="skills">
-      <div class="box">
-        <strong>Languages</strong>
-        <p>C/C++, CSS, HTML, Java, x86 , JavaScript, Numpy, Pandas, PHP, Python,R, Shell Scripting</p>
-      </div>
-      <div class="box">
-        <strong>Web</strong>
-        <p>HTML, CSS, JavaScript, PHP, ASP.NET</p>
-      </div>
-      <div class="box">
-        <strong>Tools</strong>
-        <p>Git, Unix, Unity, VSCode </p>
+    <div class="container">
+      <h2>Technical Skills</h2>
+      <div class="skills-grid">
+        <div class="card">
+          <h3>Programming Languages</h3>
+          <p>C/C++, Java, Python, JavaScript, R, x86 Assembly, PHP, Shell Scripting</p>
+        </div>
+        <div class="card">
+          <h3>Web Technologies</h3>
+          <p>HTML5, CSS3, JavaScript, PHP, ASP.NET</p>
+        </div>
+        <div class="card">
+          <h3>Tools & Libraries</h3>
+          <p>Git, Unix, Unity, VSCode, NumPy, Pandas</p>
+        </div>
       </div>
     </div>
   </section>
 
   <section id="experience">
-    <h2>Experience</h2>
-    <div class="box">
-      <h3>Bakery Service Member</h3>
-      <p>Fortinos, Sep 2021 – Aug 2022</p>
-      <ul>
-          <li>Assisted clients with service inquiries, enhancing customer satisfaction.</li>
-          <li>Organized and led group productivity meetings, boosting team efficiency.</li>
-          <li>Maintained a perfect attendance record throughout employment.</li>
-      </ul>
-    </div>
-    <div class="box">
-      <h3>Online Support Specialist</h3>
-      <p>Homelife Miracle, Apr 2023 – Sep 2024</p>
-      <ul>
-          <li>Managed client-to-broker communications, ensuring smooth interactions.</li>
-          <li>Coordinated booking of services and appointments for prospective clients.</li>
-          <li>Built strong networking relationships with brokers across the GTA.</li>
-      </ul>
+    <div class="container">
+      <h2>Professional Experience</h2>
+      <div class="experience-item">
+        <h3>Online Support Specialist</h3>
+        <p>Homelife Miracle | Apr 2023 – Sep 2024</p>
+        <ul>
+          <li>Managed client-to-broker communications, ensuring seamless interactions</li>
+          <li>Coordinated service bookings and appointments for prospective clients</li>
+          <li>Built strong networking relationships with brokers across the GTA</li>
+        </ul>
+      </div>
+      <div class="experience-item">
+        <h3>Bakery Service Member</h3>
+        <p>Fortinos | Sep 2021 – Aug 2022</p>
+        <ul>
+          <li>Enhanced customer satisfaction through quality service inquiries assistance</li>
+          <li>Led group productivity meetings, significantly boosting team efficiency</li>
+          <li>Maintained perfect attendance record throughout employment period</li>
+        </ul>
+      </div>
     </div>
   </section>
 
-<section id="projects">
-  <h2>Projects</h2>
-  <div class="projects">
-    <div class="box">
-      <h3>Project One</h3>
-      <h4><strong>Word Guessing Game</strong></h4>
-      <p><a href="https://adityashett.github.io/word-guesser/" target="_blank">https://adityashett.github.io/word-guesser/</a></p>
-      <p><strong>HTML/CSS/JavaScript, DOM Manipulation</strong></p>
-      <li>Developed responsive single-page application using vanilla JavaScript and CSS</li>
-      <li>Implemented dynamic game state management with real-time UI updates</li>
-      <li>Created adaptive difficulty system with three skill levels and scoring mechanics</li>
+  <section id="projects">
+    <div class="container">
+      <h2>Featured Projects</h2>
+      <div class="projects-grid">
+        <div class="card">
+          <h3>Word Guessing Game</h3>
+          <h4>HTML/CSS/JavaScript, DOM Manipulation</h4>
+          <p><a href="https://adityashett.github.io/word-guesser/" class="project-link" target="_blank">View Project →</a></p>
+          <p>Responsive single-page application with dynamic game state management and adaptive difficulty system featuring three skill levels.</p>
+        </div>
+        <div class="card">
+          <h3>Budget Tracker</h3>
+          <h4>HTML/CSS/JavaScript, Chart.js</h4>
+          <p><a href="https://adityashett.github.io/BudgetTracker/" class="project-link" target="_blank">View Project →</a></p>
+          <p>Comprehensive financial management tool with data visualization, real-time budget calculations, and category progress tracking.</p>
+        </div>
+        <div class="card">
+          <h3>Automated Grapher</h3>
+          <h4>Python, Streamlit, BeautifulSoup, Pandas</h4>
+          <p><a href="https://automatedgrapher-jeynjm4n6qqqpuiju8dnum.streamlit.app/" class="project-link" target="_blank">View Project →</a></p>
+          <p>Data visualization tool with automated Wikipedia extraction and intelligent web scraping for real-time chart generation.</p>
+        </div>
+      </div>
     </div>
-    <div class="box">
-      <h3>Project Two</h3>
-      <h4><strong>Budgeting App</strong></h4>
-      <p><a href="https://adityashett.github.io/BudgetTracker/" target="_blank">https://adityashett.github.io/BudgetTracker/</a></p>
-      <p><strong>HTML/CSS/JavaScript, DOM Manipulation</strong></p>
-      <li>Developed comprehensive single-page application using vanilla JavaScript with modular state management</li>
-      <li>Implemented dynamic data visualization using Chart.js for budget allocation pie charts and spending trend analysis</li>
-      <li>Created responsive multi-page interface with expense tracking, income management, and financial health monitoring</li>
-      <li>Built real-time budget calculation system with percentage-based allocation and category progress tracking</li>
+  </section>
+
+  <section id="contact">
+    <div class="container">
+      <h2>Get In Touch</h2>
+      <form class="contact-form" action="https://formspree.io/f/mblkdpvz" method="POST">
+        <input type="email" name="email" placeholder="Your Email Address" required>
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button type="submit" class="btn">Send Message</button>
+      </form>
     </div>
-    <div class="box">
-      <h3>Project Three</h3>
-      <h4><strong>Automated Grapher</strong></h4>
-      <p><a href="https://automatedgrapher-jeynjm4n6qqqpuiju8dnum.streamlit.app/" target="_blank">https://automatedgrapher-jeynjm4n6qqqpuiju8dnum.streamlit.app/</a></p>
-      <p><strong>Python, Streamlit, BeautifulSoup, Pandas, Matplotlib</strong></p>
-      <li>Developed comprehensive data visualization tool using Streamlit framework with automated Wikipedia table extraction</li>
-      <li>Implemented dynamic chart generation system supporting multiple visualization types (line, bar, pie charts) with automatic data formatting</li>
-      <li>Created intelligent web scraping pipeline using BeautifulSoup and DuckDuckGo search integration for real-time data retrieval</li>
-      <li>Built robust data processing engine with pandas DataFrame manipulation and matplotlib rendering for publication-ready visualizations</li>
-    </div>
-  </div>
-</section>
-
-
-  <section id="contact" class="contact">
-    <h2>Contact</h2>
-    
-         <form
-          action="https://formspree.io/f/mblkdpvz"
-          method="POST"
-        >
-          <label>
-            Your email:
-            <input type="email" name="email">
-          </label>
-          <label>
-            Your message:
-            <textarea name="message"></textarea>
-          </label>
-          <!-- your other form fields go here -->
-          <button type="submit">Send</button>
-        </form>
-
   </section>
 
   <footer>
-    <p>© 2024 Aditya Shetty</p>
+    <div class="container">
+      <p>© 2024 Aditya Shetty. All rights reserved.</p>
+    </div>
   </footer>
-
 </body>
 </html>
